# albums

./: Cargo.toml  NOTES.md
aggregate_root/: Cargo.toml
aggregate_root/src/: lib.rs
albums/: Cargo.toml
albums/src/: album.rs  events.rs  lib.rs
driver/: Cargo.toml
driver/src/: main.rs
infrastructure/: Cargo.toml
infrastructure/src/: album_repo.rs  in_memory_event_store.rs  lib.rs  sqlite_event_store.rs  unit_of_work.rs
metamodel/: Cargo.toml
metamodel/src/: aggregate_root.rs  entity.rs  errors.rs  event.rs  lib.rs
