[package]
name = "albums"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
aggregate_root = { path = "../aggregate_root" }
metamodel = { path = "../metamodel" }

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]