[package]
name = "metamodel"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
chrono = { version = "0.4.39", features = ["serde"] }
postgres-es = "0.4.12"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = "0.8.2"
tokio = "1.42.0"
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
